--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "knex": "<0.20.0",
+    "knex": "^0.21.1",
     "pg": "^8.3.3",
     "sqlite3": "latest",
     "strapi": "3.1.2",
